# rosalind

./: CHANGELOG.md  README.md  rosalind.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: package.cache  rosalind-0.1.0.0-inplace.conf
res/: rosalind_dna.txt
src/: CDN.hs  TDIR.hs
